# arctis_centre

./: .gitignore  README.md  anc_capture.pcapng  pyproject.toml
applications/native_windows_dashboard/: README.md
applications/tray_dashboard/: README.md  main.py
arctis-centre-app/: README.md
arctis-centre-app/docs/: FunctionalSpec.md
arctis-centre-app/electron/: main.ts  preload.ts  tray.ts  window.ts
arctis-centre-app/scripts/: backend_bridge.py
arctis-centre-app/shared/: settings.ts  types.ts
docs/: Assumptions.md  README.md
docs/apis/: arctis_nova_api.md
docs/apps/: arctis-centre-app.md  native_windows_dashboard.md  tray_dashboard.md  twinkle_tray.md
examples/: full_api_example.py  live_event_listener.py  live_state_dashboard.py  read_only_example.py
src/APIs/arctis_nova_api/: pyproject.toml
src/APIs/arctis_nova_api/examples/: full_api_example.py  live_state_dashboard.py
src/APIs/arctis_nova_api/src/arctis_nova_api/: __init__.py  capture_parser.py  sniffer.py
src/APIs/arctis_nova_api/tests/: conftest.py  test_base_station.py  test_capture_parser.py  test_gamesense.py  test_sonar.py
src/APIs/arctis_nova_api/tools/: anc_commands.json  battery_test.json  capture_usb_commands.py  current_headset_state.json  hid_sniffer.py  native_windows_dashboard_state.json  parse_hid_capture.py  tray_dashboard_state.json
tests/: test_base_station.py  test_sniffer.py  test_sonar.py
tools/: current_headset_state.json  mic_commands.json  oled_brightness_commands.json  parse_hid_capture.py  replay_hid_command.py  sidetone_commands.json
(+80 files in other folders)
